src/objects/Apttus_Config2__AttributeValueMatrix__c.object
<CustomObject>
    <description>Represents the information about attribute value compatibilities or incompatibilities.</description>
    <fields>
        <fullName>Apttus_Config2__AccountScopeOper__c</fullName>
        <description>The account scope operator</description>
        <inlineHelpText>The account scope operator</inlineHelpText>
        <label>Account Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                    <default>true</default>
                    <label>in</label>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountScope__c</fullName>
        <description>One or more accounts associated with the matrix</description>
        <inlineHelpText>One or more accounts associated with the matrix</inlineHelpText>
        <label>Account Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the matrix is active</description>
        <inlineHelpText>Indicates whether the matrix is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ApplicationType__c</fullName>
        <description>How to apply the matrix values to the attributes</description>
        <inlineHelpText>How to apply the matrix values to the attributes</inlineHelpText>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Constrain</fullName>
                </value>
                <value>
                    <fullName>Force Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultProductAttributeScopeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product attribute group associated with the matrix</description>
        <inlineHelpText>ID of the product attribute group associated with the matrix</inlineHelpText>
        <label>Default Product Attribute Scope</label>
        <referenceTo>Apttus_Config2__ProductAttributeGroup__c</referenceTo>
        <relationshipLabel>Attribute Value Matrices</relationshipLabel>
        <relationshipName>AttributeValueMatrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The matrix description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The matrix description</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The matrix effective date. The matrix becomes effective on this date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The matrix effective date. The matrix becomes effective on this date.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The matrix expiration date. The matrix becomes ineffective after this date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The matrix expiration date. The matrix becomes ineffective after this date.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyScopeOper__c</fullName>
        <description>The product family scope operator</description>
        <inlineHelpText>The product family scope operator</inlineHelpText>
        <label>Product Family Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                    <default>true</default>
                    <label>in</label>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyScope__c</fullName>
        <description>One or more product families associated with the matrix</description>
        <inlineHelpText>One or more product families associated with the matrix</inlineHelpText>
        <label>Product Family Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupScopeOper__c</fullName>
        <description>The product group scope operator</description>
        <inlineHelpText>The product group scope operator</inlineHelpText>
        <label>Product Group Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                    <default>true</default>
                    <label>in</label>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupScope__c</fullName>
        <description>One or more product groups associated with the matrix</description>
        <inlineHelpText>One or more product groups associated with the matrix</inlineHelpText>
        <label>Product Group Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScopeOper__c</fullName>
        <description>The product scope operator</description>
        <inlineHelpText>The product scope operator</inlineHelpText>
        <label>Product Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                    <default>true</default>
                    <label>in</label>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScope__c</fullName>
        <description>One or more products associated with the matrix</description>
        <inlineHelpText>One or more products associated with the matrix</inlineHelpText>
        <label>Product Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TreatNullAsWildcard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating whether to treat null entries as a wildcard</description>
        <inlineHelpText>Flag indicating whether to treat null entries as a wildcard</inlineHelpText>
        <label>Treat Null As Wildcard ?</label>
        <type>Checkbox</type>
    </fields>
    <label>Attribute Value Matrix</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Value Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>